--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,12 @@
 streamlit==1.10.0
-azure-communication-email==1.0.0b2
-azure-cosmos==4.2.0
-azureml-core==1.36.0
+azure-ai-ml==1.16.1
+azure-common==1.1.28
+azure-communication-email==1.0.0
+azure-core==1.30.1
+azure-data-tables==12.5.0
+azure-identity==1.16.0
+azure-mgmt-core==1.4.0
+azure-storage-blob==12.20.0
+azure-storage-file-datalake==12.15.0
+azure-storage-file-share==12.16.0
+azureml==0.2.7
