--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-streamlit==1.10.0
+altair==5.3.0
+attrs==23.2.0
 azure-ai-ml==1.16.1
 azure-common==1.1.28
 azure-communication-email==1.0.0
@@ -10,4 +11,86 @@ azure-storage-blob==12.20.0
 azure-storage-file-datalake==12.15.0
 azure-storage-file-share==12.16.0
 azureml==0.2.7
-dotenv
+blinker==1.8.2
+cachetools==5.3.3
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+contourpy==1.2.1
+cryptography==42.0.7
+cycler==0.12.1
+fonttools==4.52.4
+gitdb==4.0.11
+GitPython==3.1.43
+google-api-core==2.19.0
+google-auth==2.29.0
+googleapis-common-protos==1.63.0
+idna==3.7
+isodate==0.6.1
+Jinja2==3.1.4
+joblib==1.4.2
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
+kiwisolver==1.4.5
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+marshmallow==3.21.2
+matplotlib==3.9.0
+mdurl==0.1.2
+msal==1.28.0
+msal-extensions==1.1.0
+msrest==0.7.1
+multidict==6.0.5
+numpy==1.26.4
+oauthlib==3.2.2
+opencensus==0.11.4
+opencensus-context==0.1.3
+opencensus-ext-azure==1.1.13
+opencensus-ext-logging==0.1.1
+packaging==24.0
+pandas==2.2.2
+pillow==10.3.0
+portalocker==2.8.2
+proto-plus==1.23.0
+protobuf==4.25.3
+psutil==5.9.8
+pyarrow==16.1.0
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycparser==2.22
+pydash==8.0.1
+pydeck==0.9.1
+Pygments==2.18.0
+PyJWT==2.8.0
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.1
+pywin32==306
+PyYAML==6.0.1
+referencing==0.35.1
+requests==2.32.3
+requests-oauthlib==2.0.0
+rich==13.7.1
+rpds-py==0.18.1
+rsa==4.9
+scikit-learn==1.5.0
+scipy==1.13.1
+six==1.16.0
+smmap==5.0.1
+streamlit==1.35.0
+streamlit-lottie==0.0.5
+strictyaml==1.7.3
+tenacity==8.3.0
+threadpoolctl==3.5.0
+toml==0.10.2
+toolz==0.12.1
+tornado==6.4
+tqdm==4.66.4
+typing_extensions==4.12.0
+tzdata==2024.1
+urllib3==2.2.1
+watchdog==4.0.1
+yarl==1.9.4
